--- a/index.html
+++ b/index.html
@@ -48,6 +48,15 @@
         </form>
     </div>
 
+    <div class="container">
+        <h2>Top Articles</h2>
+        <div id="articles">
+
+        </div>
+
+
+    </div>
+
 
 
 
